fix app and common gradle dependencies

--- a/config/common.gradle
+++ b/config/common.gradle
@@ -1,12 +1,12 @@
-apply plugin: 'com.android.application'
+apply from: "$rootDir/config/libraries.gradle"
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        applicationId "com.tokopedia.productsearch"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
