--- a/config/libraries.gradle
+++ b/config/libraries.gradle
@@ -1,4 +1,9 @@
 ext {
+    compileSdkVersion = 28
+    buildToolsVersion = "29.0.0"
+    minSdkVersion = 18
+    targetSdkVersion = 28
+
     appcompat = "1.0.0-beta01"
     kotlin = "1.3.20"
     coreKtx = "1.2.0-alpha03"
@@ -6,21 +11,28 @@ ext {
     espresso = "3.1.0-alpha4"
     junit = "4.12"
 
+    retrofit = "2.6.0"
+    okhttpLog = "3.11.0"
+
     lib = [
-            "tensorflow"    : "org.tensorflow:tensorflow-lite:+",
-            "appcompat"     : "androidx.appcompat:appcompat:${appcompat}",
-            "kotlin"        : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin}",
-            "coreKtx"       : "androidx.core:core-ktx:${coreKtx}"
+            "tensorflow"            : "org.tensorflow:tensorflow-lite:+",
+            "appcompat"             : "androidx.appcompat:appcompat:${appcompat}",
+            "kotlin"                : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin}",
+            "coreKtx"               : "androidx.core:core-ktx:${coreKtx}",
+            "retrofit"              : "com.squareup.retrofit2:retrofit:${retrofit}",
+            "retrofitGsonConverter" : "com.squareup.retrofit2:converter-gson:${retrofit}",
+            "retrofitRxAdapter"     : "com.squareup.retrofit2:adapter-rxjava2:${retrofit}",
+            "okHttpLogging"         : "com.squareup.okhttp3:logging-interceptor:${okhttpLog}"
     ]
 
     testLib = [
-            "testRunner"    : "androidx.test:runner:${testRunner}",
-            "espresso"      : "androidx.test.espresso:espresso-core:${espresso}",
-            "junit"         : "junit:junit:${junit}"
+            "testRunner"            : "androidx.test:runner:${testRunner}",
+            "espresso"              : "androidx.test.espresso:espresso-core:${espresso}",
+            "junit"                 : "junit:junit:${junit}"
     ]
 
     internal = [
-            "abstraction"   : ":abstraction",
-            "network"       : ":network"
+            "abstraction"           : ":abstraction",
+            "network"               : ":network"
     ]
 }
