--- a/abstraction/build.gradle
+++ b/abstraction/build.gradle
@@ -1,5 +1,6 @@
 apply from: "$rootDir/config/common.gradle"
 
 dependencies {
-
+    implementation rootProject.ext.lib.lifecycle
+    kapt rootProject.ext.lib.lifecycleCompiler
 }
