--- a/config/libraries.gradle
+++ b/config/libraries.gradle
@@ -11,12 +11,22 @@ ext {
     appcompat = "1.0.0-beta01"
     kotlin = "1.3.20"
     coreKtx = "1.2.0-alpha03"
-    testRunner = "1.1.0-alpha4"
-    espresso = "3.1.0-alpha4"
-    junit = "4.12"
+    archLifecycle = "2.0.0"
+
+    glide = "4.8.0"
+
+    dagger = "2.21"
+
+    rxjava = "2.2.12"
+    rxkotlin = "2.4.0"
+    rxandroid = "2.1.1"
 
     retrofit = "2.6.0"
     okhttpLog = "3.11.0"
+
+    testRunner = "1.1.0-alpha4"
+    espresso = "3.1.0-alpha4"
+    junit = "4.12"
 
     lib = [
             "tensorflow"                : "org.tensorflow:tensorflow-lite:+",
@@ -26,7 +36,18 @@ ext {
             "retrofit"                  : "com.squareup.retrofit2:retrofit:${retrofit}",
             "retrofitGsonConverter"     : "com.squareup.retrofit2:converter-gson:${retrofit}",
             "retrofitRxAdapter"         : "com.squareup.retrofit2:adapter-rxjava2:${retrofit}",
-            "okHttpLogging"             : "com.squareup.okhttp3:logging-interceptor:${okhttpLog}"
+            "okHttpLogging"             : "com.squareup.okhttp3:logging-interceptor:${okhttpLog}",
+            "lifecycle"                 : "androidx.lifecycle:lifecycle-extensions:${archLifecycle}",
+            "lifecycleCompiler"         : "androidx.lifecycle:lifecycle-compiler:${archLifecycle}",
+            "glide"                     : "com.github.bumptech.glide:glide:${glide}",
+            "glideCompiler"             : "com.github.bumptech.glide:compiler:${glide}",
+            "dagger"                    : "com.google.dagger:dagger:${dagger}",
+            "daggerAndroid"             : "com.google.dagger:dagger-android:${dagger}",
+            "daggerCompiler"            : "com.google.dagger:dagger-compiler:${dagger}",
+            "daggerProcessor"           : "com.google.dagger:dagger-android-processor:${dagger}",
+            "rxjava"                    : "io.reactivex.rxjava2:rxjava:${rxjava}",
+            "rxkotlin"                  : "io.reactivex.rxjava2:rxkotlin:${rxkotlin}",
+            "rxandroid"                 : "io.reactivex.rxjava2:rxandroid:${rxandroid}"
     ]
 
     testLib = [
