--- a/config/libraries.gradle
+++ b/config/libraries.gradle
@@ -59,6 +59,7 @@ ext {
 
     internal = [
             "abstraction"               : ":abstraction",
-            "network"                   : ":network"
+            "network"                   : ":network",
+            "search"                    : ":search"
     ]
 }
