create a simple search activity

--- a/search/src/main/AndroidManifest.xml
+++ b/search/src/main/AndroidManifest.xml
@@ -1,3 +1,9 @@
 <manifest
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		package="com.tokopedia.search"/>
+		package="com.tokopedia.search">
+
+		<application>
+				<activity android:name=".ui.SearchActivity"/>
+		</application>
+
+</manifest>
