--- a/recognize/build.gradle
+++ b/recognize/build.gradle
@@ -1,5 +1,5 @@
 apply from: "$rootDir/config/common.gradle"
 
 dependencies {
-
+    implementation project(rootProject.ext.internal.abstraction)
 }
