add recyclerview base adapter on abstraction

--- a/abstraction/build.gradle
+++ b/abstraction/build.gradle
@@ -1,6 +1,7 @@
 apply from: "$rootDir/config/common.gradle"
 
 dependencies {
+    implementation rootProject.ext.lib.recyclerview
     implementation rootProject.ext.lib.lifecycle
     kapt rootProject.ext.lib.lifecycleCompiler
 }
