--- a/config/libraries.gradle
+++ b/config/libraries.gradle
@@ -28,6 +28,7 @@ ext {
 
     gson = "2.8.5"
 
+    mockito = "3.0.0"
     testRunner = "1.1.0-alpha4"
     espresso = "3.1.0-alpha4"
     junit = "4.12"
@@ -60,7 +61,8 @@ ext {
             "instrumentationRunner"     : "androidx.test.runner.AndroidJUnitRunner",
             "testRunner"                : "androidx.test:runner:${testRunner}",
             "espresso"                  : "androidx.test.espresso:espresso-core:${espresso}",
-            "junit"                     : "junit:junit:${junit}"
+            "junit"                     : "junit:junit:${junit}",
+            "mockito"                   : "org.mockito:mockito-inline:${mockito}"
     ]
 
     internal = [
