--- a/config/common.gradle
+++ b/config/common.gradle
@@ -22,7 +22,7 @@ android {
 
         testInstrumentationRunner rootProject.ext.testLib.instrumentationRunner
 
-        buildConfigField("String", "MAIN_URL", api_tokopedia)
+        buildConfigField("String", "MAIN_URL", topedRestUrl)
     }
     buildTypes {
         release {
